style.css
/* ... */
.widget-area ul li a:hover {
	text-decoration: underline;
}

.widget-area .widget-title {
	font-size: 16px;
	letter-spacing: inherit;
	margin-bottom: 10px;
}

.widget-area select {
	max-width: 100%;
}

.site-navigation,
.post-navigation {
	margin-top: 20px;
}

.infinite-scroll .site-navigation {
	display: none;
}

.infinite-scroll .main-navigation {
	display: block;
}

.infinite-loader {
	display: block;
	padding-left: 50%;
}

.infinite-loader .spinner {
	margin-left: -17px;
}

#infinite-handle {
	margin-top: 20px;
	text-align: center;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 20px 0;
	font-family:"Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
	color: #333332;
	letter-spacing: -1px;
	font-weight: 700;
	line-height: 1;
}

h1 {
	font-size: 2.5em;
}
h2 {
	font-size: 1.9em;
}
h3 {
	font-size: 1.6em;
}
h4 {
	font-size: 1.4em;
}
h5 {
	font-size: 1.3em;
}
h6 {
	font-size: 1.2em;
}

.entry-content h1 {
	font-size: 2.2em;
}

.page h1.entry-title {margin-top: 20px; }

.blog article,
.archive article,
.search article {
	padding: 40px 0 40px 0;
	border-bottom: solid 1px #ddd;
}

.entry-title a {
	color: #404040;
	text-decoration: none;
}

.entry-title a:hover {
	color: #57ad68;
}

.entry-title-meta {
	font-size: 13px;
   color: #b3b3b1;
   font-weight: 100;
   letter-spacing: 1px;
   margin-bottom: 0px;
   margin-top: 0px;
	font-style: normal;
}
.entry-title-meta a {
	color: #b3b3b1;
	text-decoration: none;
}

.entry-title-meta-author {
	display: none;
}

.entry-meta,
.entry-meta a {
	color: #b3b3b1;
	font-size: 13px;
	font-family: "Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
	font-weight: 100;
	font-style: normal;
	text-align: right;
}

.entry-meta a:hover {
	color: #57ad68;
}
.single .entry-meta {
	border-top: 1px solid #eee;
	padding-bottom: 40px;
	padding-top: 40px;
}

.site {
	background-color: #ffffff;
	margin: 80px auto;
	padding: 0 40px;
	max-width: 700px;
	margin-bottom: 0;
	margin-top: 150px;
}

.site-header {
	float: left;
	margin-top: 0px;
	margin-bottom: 40px;
	width: 160px;
	position: relative;
	margin-left: -220px;
	text-align: right;
}

.site-content,
.site-footer {
	float: right;
	max-width: 700px;
	width: 100%;
}

.widget-area {
	float: left;
	width: 160px; /* Sidebar 1 */
	clear: left;
	margin-left: -220px;
	text-align: right;
	font-family: "Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
	font-size: 15px;
}

.site-header,
.entry-header,
.entry-content,
.widget-area .widget,
.comment {
	-webkit-hyphens: auto;
	-moz-hyphens: auto;
	hyphens: auto;
	word-wrap: break-word;
}

.widget_search input[type="text"] { /* fixes overflow issue */
	width: 90%;
}

.site-footer {
	clear: both;
	margin-top: 100px;
	margin-bottom: 40px;
	color: #999;
}

.site-footer,
.site-footer a {
	font-size: 13px;
	text-align: center;
}

.site-footer a:hover {
	color: #57ad68;
}

.site-info {
	font-family: sans-serif;
	font-weight: 100;
}

img#wpstats {
	display: block;
	margin: 5px auto;
}

table td {
	padding: 4px 0;
	border-bottom: solid 1px #eee;
	font-weight: 300;
}

table th {
	padding: 4px 0;
	border-bottom: solid 1px #ccc;
}

/* Post Author Bottom Card */

.post-author-bottom {
	padding-top: 50px;
	padding-bottom: 50px;
	margin-bottom: 40px;
	position: relative;
	border-top: 1px solid #ddd;
	border-bottom: 1px solid #ddd;
	display: none;
}

.post-author-bottom .site-logo img {
	float: left;
	height: auto;
}
.post-author-bottom .site-title,
.post-author-bottom .site-description {
	clear: none;
}
.post-author-bottom .post-author-info {
	margin-left: 100px;
	margin-right: 200px;
	padding-right:  25px;
	padding-top: 10px;
}
.post-author-bottom h1.site-title,
.post-author-bottom h2.site-description {
	margin-left: 0;
}
.post-author-bottom h1.site-title {
	font-style: normal;
}
.post-author-bottom .post-published-date {
	width: 177px;
	padding-left: 385px;
	position: absolute;
	margin-top: -85px;
	top: 135px;
	right: 0;
}

/* Hide left-side author card under 1200px */
@media only screen and (max-width : 1200px) {
	.site {
		margin-top: 80px;
	}

	.single .site-header {
		display: none;
	}

	.site-header {
		text-align: center;
		margin-left: 0;
		float: none;
		display: block;
		width: 100%;
	}

	.post-author-bottom {
		display: block;
	}
	.entry-meta {
		border-bottom: none;
	}
	.entry-title-meta-author {
		display: inline-block;
	}
	.widget-area {
		float: right;
		width: 100%;
		margin-left: 0;
		text-align: inherit;
		padding-top: 40px;
	}
	.widget-area ul li a {
		display: inline-block;
	}
	#nav-below {
		margin-top: 40px;
	}
   .single .entry-meta {
	   border-top: none;
   }

	.page article {
		padding: 40px 0 40px 0;
	}
	.main-navigation {
		clear: none;
	}
	.site-navigation {
		border-bottom: 1px solid #eee;
		padding-bottom: 40px;
	}
	#nav-below .site-navigation {
		margin-top: 40px;
	}
	.main-navigation li {
		display: inline-block;
		padding: 5px 10px;
		width: auto;
	}

	#masthead .site-title,
	#masthead .site-description {
		clear: none;
		margin-left: 0;
		margin-top: 0;
	}
	#masthead .site-title {
		font-style: normal;
		padding-top: 15px;
		padding-left: 0;
	}
	#masthead .site-description {
		padding-left: 0;
		padding-top: 20px;
	}

	#masthead .site-logo,
	#masthead .site-logo img {
		float: none;
		max-width: 100px;
	}
}
/* ... */

